--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Project exclude paths
-/.gradle/
-/build/
+/.gradle/*
+/.idea/*
+**/out/*
+**/build/*
+**/*.iml
+/documents/*.pdb
+hs_err_pid*
+/logs/*
