--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,171 @@
-plugins {
-    id 'java'
+group = 'com.tinder'
+version = '0.0.1-SNAPSHOT'
+
+buildscript {
+    ext {
+        springBootVersion = '2.2.4.RELEASE'
+        springDependencyManagementVersion = '1.0.8.RELEASE'
+        flywayPluginVersion = '7.15.0'
+        flywayCoreVersion = '7.15.0'
+        postgresDriverVersion = '42.2.5'
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "io.spring.gradle:dependency-management-plugin:$springDependencyManagementVersion"
+        classpath "org.ajoberstar:gradle-git:1.7.2"
+        classpath "org.postgresql:postgresql:$postgresDriverVersion"
+    }
 }
 
-group 'ru.prerevolution.tinder'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+ext {
+    springVersion = '5.2.3.RELEASE'
+    springDataVersion = '2.2.4.RELEASE'
+    springBootVersion = '2.2.4.RELEASE'
+    springRetryVersion = '1.3.1'
+    postgresDriverVersion = '42.2.5'
+    slf4jVersion = '1.7.26'
+    logbackVersion = '1.2.3'
+    junitVersion = '5.7.2'
+    flywayVersion = '7.15.0'
+    modelMapperVersion = '2.4.4'
+    commonsLangVersion = '3.12.0'
+    lombokVersion = '1.18.20'
+    hikariCPVersion = '3.2.0'
+    javaxServletVersion = '3.1.0'
+    javaxPersistenceVersion = '2.2'
+    tomcatVersion = '2.5.4'
+    jacksonVersion = '2.12.5'
+    logbackJsonVersion = '0.1.5'
+    assertJCore = '3.21.0'
+    vavrVersion = '0.10.4'
+    poiOoxmlVesrion = '5.0.0'
+    springSecurityVersion = '5.1.6.RELEASE'
+    jjwtVersion = '0.10.7'
+    guavaVersion = '31.0.1-jre'
+    swaggerV3Version = '2.1.11'
+    swaggerV2Version = '3.0.0'
+    springDocUIVersion = '1.5.2'
+    htpClientVersion = '4.5.13'
+    commonsIoVersion = '2.11.0'
+    springRetryVersion = '1.2.4.RELEASE'
+    aspectjWeaverVersion = '1.9.6'
+    springActuatorVersion = '2.2.13.RELEASE'
+    telegramVersion = '5.7.1'
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-}
 
-test {
-    useJUnitPlatform()
+
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.ajoberstar.grgit'
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    ext {
+        appName = 'Tinder'
+        appVendor = 'Digital League'
+
+    }
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+        compile {
+            exclude module: 'spring-boot-starter-reactor-netty'
+            exclude group: 'io.netty'
+            exclude group: 'org.apache.logging.log4j'
+        }
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    test {
+        useJUnitPlatform()
+        ignoreFailures = true
+    }
+
+    dependencyManagement {
+        dependencies {
+            dependency "org.slf4j:slf4j-api:$slf4jVersion"
+            dependency "org.slf4j:log4j-over-slf4j:$slf4jVersion"
+            dependency "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+            dependency "ch.qos.logback:logback-core:$logbackVersion"
+            dependency "ch.qos.logback:logback-classic:$logbackVersion"
+
+            dependency "javax.servlet:javax.servlet-api:$javaxServletVersion"
+            dependency "javax.persistence:javax.persistence-api:$javaxPersistenceVersion"
+
+            dependency "org.springframework:spring-core:$springVersion"
+            dependency "org.springframework:spring-context:$springVersion"
+            dependency "org.springframework:spring-aspects:$springVersion"
+            dependency "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
+            dependency "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
+            dependency "org.springframework.boot:spring-boot-starter-tomcat:$tomcatVersion"
+            dependency "org.springframework.boot:spring-boot-actuator:$springActuatorVersion"
+
+            dependency "org.springframework.retry:spring-retry:$springRetryVersion"
+            dependency "org.aspectj:aspectjweaver:$aspectjWeaverVersion"
+
+            dependency "rg.springframework.security:spring-security-core:$tomcatVersion"
+            dependency "org.springframework.security:spring-security-core:$springSecurityVersion"
+            dependency "org.springframework.security:spring-security-config:$springSecurityVersion"
+            dependency "org.springframework.security:spring-security-web:$springSecurityVersion"
+            dependency "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
+            dependency "org.springframework.retry:spring-retry:$springRetryVersion"
+
+            dependency "io.jsonwebtoken:jjwt-api:$jjwtVersion"
+            dependency "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
+            dependency "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
+
+            dependency "org.postgresql:postgresql:$postgresDriverVersion"
+            dependency "com.zaxxer:HikariCP:$hikariCPVersion"
+
+            dependency "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+            dependency "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+            dependency "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+            dependency "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
+            dependency "ch.qos.logback.contrib:logback-json-classic:$logbackJsonVersion"
+            dependency "ch.qos.logback.contrib:logback-jackson:$logbackJsonVersion"
+
+            dependency "org.projectlombok:lombok:$lombokVersion"
+            dependency "org.modelmapper:modelmapper:$modelMapperVersion"
+            dependency "org.flywaydb:flyway-core:$flywayVersion"
+
+            dependency "org.apache.commons:commons-lang3:$commonsLangVersion"
+            dependency "org.apache.poi:poi-ooxml:$poiOoxmlVesrion"
+
+            dependency "io.vavr:vavr:$vavrVersion"
+
+            dependency "com.google.guava:guava:$guavaVersion"
+
+
+            dependency("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
+                exclude "junit:junit"
+            }
+
+            dependency "org.junit.jupiter:junit-jupiter:$junitVersion"
+            dependency "org.assertj:assertj-core:$assertJCore"
+
+            dependency "io.springfox:springfox-swagger2:$swaggerV2Version"
+            dependency "org.springdoc:springdoc-openapi-ui:$springDocUIVersion"
+            dependency "org.apache.httpcomponents:httpclient:$htpClientVersion"
+            dependency "commons-io:commons-io:$commonsIoVersion"
+
+            dependency "org.telegram:telegrambots:$telegramVersion"
+        }
+    }
 }
