--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'prerevolution-tinder'
 
 include 'prerevolutionary-tinder-server'
-include 'tinder-client'
+include 'prerevolutionary-tinder-client'
 
