--- a/prerevolutionary-tinder-server/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+postgresql.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+postgresql.dataSource.serverName=postgresql
+postgresql.dataSource.portNumber=5432
+postgresql.dataSource.databaseName=fccrdb
+postgresql.dataSource.user=root
+postgresql.dataSource.password=root
+postgresql.dataSource.driver=org.postgresql.Driver
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = root
