--- a/prerevolutionary-tinder-server/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 postgresql.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 postgresql.dataSource.serverName=postgresql
-postgresql.dataSource.portNumber=5432
+postgresql.dataSource.portNumber=5433
 postgresql.dataSource.databaseName=fccrdb
 postgresql.dataSource.user=root
 postgresql.dataSource.password=root
 postgresql.dataSource.driver=org.postgresql.Driver
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = root
+spring.datasource.url = jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username = postgres
 spring.datasource.password = root
-spring.flyway.locations=classpath:db/migration, db/data, db/alter-migration
+spring.flyway.locations=classpath:db/migration
