--- a/prerevolutionary-tinder-server/src/main/resources/flyway.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/flyway.properties
@@ -1,6 +1,6 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/postgres
-user=root
+url=jdbc:postgresql://localhost:5433/postgres
+user=postgres
 password=root
 schemas=postgres
-locations=classpath:db/migration, db/data/, db/alter-migration/
+locations=classpath:db/migration
