--- a/prerevolutionary-tinder-server/build.gradle
+++ b/prerevolutionary-tinder-server/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'org.apache.commons:commons-lang3:3.0'
     compile 'org.flywaydb:flyway-core:6.5.7'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
