--- a/prerevolutionary-tinder-server/src/main/resources/flyway.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/flyway.properties
@@ -1,6 +1,6 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5433/postgres
-user=postgres
+url=jdbc:postgresql://localhost:5432/tinderdb
+user=root
 password=root
-schemas=postgres
+schemas=tinderdb
 locations=classpath:db/migration
