fill tinder-client  module

--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,12 @@ ext {
     springRetryVersion = '1.2.4.RELEASE'
     aspectjWeaverVersion = '1.9.6'
     springActuatorVersion = '2.2.13.RELEASE'
-    telegramVersion = '4.4.0.1'
+    telegramVersion = '3.5'
     telegramSprintBootVersion ='4.4.0.1'
     unirestJavaVersion = '1.4.9'
+    jtelegramVersion = '4.0.1'
+    log4jVersion = '1.2.17'
+    konghqVersion = '3.12.0'
 
 }
 
@@ -79,7 +82,9 @@ subprojects {
         appVendor = 'Digital League'
 
     }
-
+    configurations {
+        compile.exclude module: 'spring-boot-starter-logging'
+    }
     configurations {
         compileOnly {
             extendsFrom annotationProcessor
@@ -106,6 +111,7 @@ subprojects {
             dependency "org.slf4j:slf4j-api:$slf4jVersion"
             dependency "org.slf4j:log4j-over-slf4j:$slf4jVersion"
             dependency "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+            dependency "org.slf4j:slf4j-log4j12:$slf4jVersion"
             dependency "ch.qos.logback:logback-core:$logbackVersion"
             dependency "ch.qos.logback:logback-classic:$logbackVersion"
 
@@ -171,6 +177,15 @@ subprojects {
             dependency "org.telegram:telegrambots:$telegramVersion"
             dependency "org.telegram:telegrambots-spring-boot-starter:$telegramSprintBootVersion"
             dependency "com.mashape.unirest:unirest-java:$unirestJavaVersion"
+
+            dependency "com.jtelegram:jtelegrambotapi-core:$jtelegramVersion"
+            dependency "log4j:log4j:$log4jVersion"
+            dependency "com.konghq:unirest-java:$konghqVersion"
+            dependency ("org.apache.logging.log4j:log4j-core:2.17.1")
+
+
+
+
 
         }
     }
