--- a/prerevolutionary-tinder-client/build.gradle
+++ b/prerevolutionary-tinder-client/build.gradle
@@ -1,35 +1,34 @@
 plugins {
-    id 'java'
+
+	id 'java'
 }
 
-group 'ru.digitalleague'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-tomcat'
-    compile 'org.springframework.retry:spring-retry'
-    compile 'org.aspectj:aspectjweaver'
-    compile 'org.junit.jupiter:junit-jupiter'
-    compile 'org.modelmapper:modelmapper'
-    compile 'io.vavr:vavr'
-    compile 'commons-io:commons-io'
-    compile 'org.telegram:telegrambots'
-    compile 'org.telegram:telegrambots-spring-boot-starter'
-    compile 'com.mashape.unirest:unirest-java'
+	compile 'org.telegram:telegrambots-spring-boot-starter'
+	compile 'org.telegram:telegrambots'
+	compile 'org.apache.logging.log4j:log4j-core'
+	compile 'log4j:log4j'
+}
 
-    compile 'org.springdoc:springdoc-openapi-ui'
-    annotationProcessor("org.projectlombok:lombok")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.assertj:assertj-core")
+tasks.named('test') {
+	useJUnitPlatform()
 }
