--- a/prerevolutionary-tinder-client/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-client/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-reconnect_pause=10000
-bot_name=AncientTinder_bot
-bot_token=5030909216:AAHZsk0dKDhN_AK_D7IaOD5WWxadsWSXpEw
-bot_path=https://ea0c-91-241-13-31.eu.ngrok.io
-file_path=1.jpg
+server.port=8081
+reconnect.pause=10000
+bot.name=AncientTinder_bot
+bot.token=5030909216:AAHZsk0dKDhN_AK_D7IaOD5WWxadsWSXpEw
+bot.path=https://ea0c-91-241-13-31.eu.ngrok.io
+file.path=classpath:images/prerev-background.jpg
+file.location=classpath:images/
+route.server.url=http://localhost:8080
+rest.service.connect.timeout=10000
+rest.service.read.timeout=10000
