--- a/prerevolutionary-tinder-server/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/tinderdb
 spring.datasource.username = root
 spring.datasource.password = root
 spring.flyway.locations=classpath:db/migration
+
+
+#show sql statement
+logging.level.org.hibernate.SQL=debug
+#show sql values
+logging.level.org.hibernate.type.descriptor.sql=trace
