--- a/prerevolutionary-tinder-server/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.flyway.locations=classpath:db/migration
 
 
 #show sql statement
-logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.SQL=debug
 #show sql values
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
