--- a/prerevolutionary-tinder-server/src/main/resources/application.properties
+++ b/prerevolutionary-tinder-server/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.flyway.locations=classpath:db/migration
 
+file.path=classpath:images/prerev-background.jpg
+file.location=classpath:images/
 
 #show sql statement
 #logging.level.org.hibernate.SQL=debug
